# hydro-som

./: .gitignore  data.csv  experimentation.ipynb  figure_0.html  figure_1.html  figure_2.html  git-prep.cmd  pyproject.toml  requirements.txt
docs/: feature_plot_columns.md
paper-draft/: 0SOMFinalPaper_2134722513.py  0SOMFinalPaper_2134722513_rev1.py
report/: 1_generate_som_clusters.py  2_dendrogram.py  final_clusterization_2000_all_Factors.ipynb
sep25_liu_data/: example_Liu_et_al_2021.py
sep25_our_data/: a_data_for_Programing_(ions_2000_for_dendrogram).csv  example_Liu_et_al_2021_for_our_data.py
